--- a/Tribute-page/index.html
+++ b/Tribute-page/index.html
@@ -5,7 +5,7 @@
     <h1 id="title">Masahiro Sakurai</h1>
     <p id="short-desc">A very epic man</p>
     <div id="img-div, image-container">
-      <img id="image" src="https://pbs.twimg.com/media/E9hE3B_VkAAP-pW?format=jpg&name=medium" alt="A man of sheer will">
+      <img id="image" src="https://pbs.twimg.com/media/EjQCz_fXkAAbQzQ?format=jpg&name=large" alt="A man of sheer will">
       <figcaption id="sakurai-caption">Sakurai talked about his seemingly impossible request to put Minecraft in Super Smash Bros. Ultimate.</figcaption>
       </div>
     <section class="tribute-info">
