--- a/Survey-form/index.html
+++ b/Survey-form/index.html
@@ -39,13 +39,13 @@
           </select>
           <p class="rickRoll textBox">6). Do you enjoy being Rick Rolled?</p>
         <select class="form-select rickBox" aria-label="Default select example">
-            <option selected>Select your fondess over Rick Rolling</option>
+            <option selected>Select your fondess being Rick Rolled</option>
             <option value="Yes">Yes</option>
             <option value="No">No</option>
             <option value="Occasionally">Occasionally</option>
           </select>
           <div class="d-grid gap-2">
-          <button onclick="location.href='https://youtu.be/QtBDL8EiNZo'" type="button" class="submitButton btn btn-success btn-lg btn-block">Submit</button>
+          <button onclick="location.href='https://youtu.be/QtBDL8EiNZo'" type="button" class="submitButton btn btn-success btn-lg btn-block">Submit <i class="fab fa-telegram-plane"></i></button>
         </div>
         </div>
         </form>
