--- a/Survey-form/index.html
+++ b/Survey-form/index.html
@@ -39,7 +39,7 @@
           </select>
           <p class="rickRoll textBox">6). Do you enjoy being Rick Rolled?</p>
         <select class="form-select rickBox" aria-label="Default select example">
-            <option selected>Select your fondess being Rick Rolled</option>
+            <option selected>Select your fondness being Rick Rolled</option>
             <option value="Yes">Yes</option>
             <option value="No">No</option>
             <option value="Occasionally">Occasionally</option>
