--- a/Random-number-generator/index.html
+++ b/Random-number-generator/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <script src="https://kit.fontawesome.com/7224fca3e7.js" crossorigin="anonymous"></script>
