--- a/Frontend Mentor/Order Summary/index.html
+++ b/Frontend Mentor/Order Summary/index.html
@@ -10,13 +10,16 @@
 
 </head>
 <body>
+  <main>
   <img id='backgroundDesktop' src="images/pattern-background-desktop.svg" alt="">
   <img id='backgroundMobile' src="images/pattern-background-mobile.svg" alt="">
   <div id='flex'>
     <div id="container">
-      <img id='hero' src="images/illustration-hero.svg" alt="">
-      <h1>Order Summary</h1>
-      <p>You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
+      <img id='hero' src="images/illustration-hero.svg" alt=""> 
+      <header>
+        <h1>Order Summary</h1>
+      </header>
+        <p>You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
       <div id="plans">
         <a id='change' href="#">Change</a>
         <div id="text">
@@ -28,13 +31,15 @@
         </div>
       </div>
       <button>Proceed to Payment</button>
-      <div id='cancel'>Cancel Order</div>
+      <div id='cancelCenter'><a id='cancel'>Cancel Order</a></div>
     </div>
   </div>
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://github.com/LeonTrii" target='_blank'>Leon Truong</a>.
-  </div>
+</main>
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://github.com/LeonTrii" target='_blank'>Leon Truong</a>.
+    </div>
+  </footer>
 </body>
 </html>
