--- a/Frontend Mentor/Preview Card/index.html
+++ b/Frontend Mentor/Preview Card/index.html
@@ -13,20 +13,20 @@
     <div id="container">
       
       <div id="insideCard">
-        <div id="eye"><img id='view' src="images/icon-view.svg" alt=""></div>
+        <div id="eye"><img id='view' src="images/icon-view.svg" alt="An eye"></div>
         <div id="picture">
-          <img id='equilibrium' src='images/image-equilibrium.jpg'>
+          <img id='equilibrium' src='images/image-equilibrium.jpg' alt='equilibrium'>
           <div id="overlay"></div>
         </div>
-      <p id='tag'>Equilibrium #3429</p>
+      <h1 id='tag'>Equilibrium #3429</h1>
       <p id='desc'>Our Equilibrium collection promotes balance and calm.</p>
       <div id="price">
-        <img id='icon' src="images/icon-ethereum.svg">
+        <img id='icon' src="images/icon-ethereum.svg" alt='eth'>
         <span id='eth'>0.041 ETH</span>
-        <img id='clock' src="images/icon-clock.svg" alt="">
+        <img id='clock' src="images/icon-clock.svg" alt="A clock">
         <span id='time'>3 days left</span>
       </div>
-      <img id='profile' src="images/image-avatar.png" alt="">
+      <img id='profile' src="images/image-avatar.png" alt="User">
       <span id='authorAttr'>Creation of</span>
       <a id='author'>Jules Wyvern</a>
       </div>
