--- a/Frontend Mentor/Stats Preview Card/index.html
+++ b/Frontend Mentor/Stats Preview Card/index.html
@@ -41,7 +41,7 @@
   <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="www.github.io/leontrii">Leon Truong</a>.
+      Coded by <a href="www.github.io/truongmleon">Leon Truong</a>.
     </div>
   </footer>
 </body>
