--- a/Frontend Mentor/Social Proof Section/index.html
+++ b/Frontend Mentor/Social Proof Section/index.html
@@ -103,7 +103,7 @@
       <div class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-        Coded by <a href="https://github.com/leontrii" target="_blank">Leon Truong</a>.
+        Coded by <a href="https://github.com/truongmleon" target="_blank">Leon Truong</a>.
       </div>
     </footer>
   </body>
