--- a/Frontend Mentor/QR Code/index.html
+++ b/Frontend Mentor/QR Code/index.html
@@ -20,7 +20,7 @@
   <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="https://www.github.com/leontrii" target="_blank">Leon Truong</a>.
+      Coded by <a href="https://www.github.com/truongmleon" target="_blank">Leon Truong</a>.
     </div>
   </footer>
 </body>
