--- a/Frontend Mentor/Interactive-Rating-Component/index.html
+++ b/Frontend Mentor/Interactive-Rating-Component/index.html
@@ -8,7 +8,8 @@
   <title>Frontend Mentor | Interactive rating component</title>
 </head>
 <body>
-  <div class="flex">
+<main>
+    <div class="flex">
 
     <div id="container">
       <div id="thankContainer">
@@ -40,11 +41,14 @@
     </div>
     </div>
   </div>
+</main>
   
-  <div class="attribution">
+<footer>
+    <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://github.com/truongmleon">Leon Truong</a>.
   </div>
+</footer>
 </body>
 <script src="script.js" defer></script>
 </html>
