--- a/Frontend Mentor/Social Proof Section/index.html
+++ b/Frontend Mentor/Social Proof Section/index.html
@@ -15,8 +15,10 @@
 
   </head>
   <body>
-    <img id="topDesktop" src="images/bg-pattern-top-desktop.svg" alt="graphic for desktop">
+<header>
+      <img id="topDesktop" src="images/bg-pattern-top-desktop.svg" alt="graphic for desktop">
     <img id="bottomDesktop" src="images/bg-pattern-bottom-desktop.svg" alt="graphic for desktop">
+</header>
 
    
       <main class="flex">
@@ -59,7 +61,7 @@
               
               <div class="card" id="cardOne">
                 <h3 class="name">Colton Smith</h3>
-                <p id="verified">Verified Buyer</p>
+                <p class="verified">Verified Buyer</p>
                 <img id="colton" src="images/image-colton.jpg" alt="image-colton">
                 <div class="cardContainer">
                   <p class="wordReview">"We needed the same printed design as the one we had ordered a week prior.
@@ -70,7 +72,7 @@
 
               <div class="card" id="cardTwo">
                 <h3 class="name">Irene Roberts</h3>
-                <p id="verified">Verified Buyer</p>
+                <p class="verified">Verified Buyer</p>
                 <img src="images/image-irene.jpg" alt="image-irene">
                 <div class="cardContainer">
                   <p class="wordReview">"Customer service is always excellent and very quick turn around. Completely
@@ -80,7 +82,7 @@
 
               <div class="card" id="cardThree">
                 <h3 class="name">Anne Wallace</h3>
-                <p id="verified">Verified Buyer</p>
+                <p class="verified">Verified Buyer</p>
                 <img src="images/image-anne.jpg" alt="image-anne">
                 <div class="cardContainer">
                   <p class="wordReview">"Put an order with this company and can only praise them for the very high
