--- a/Frontend Mentor/Advice Generator App/index.html
+++ b/Frontend Mentor/Advice Generator App/index.html
@@ -13,7 +13,7 @@
     <div class="flex">
       <div id="container">
         <div id="adviceNumber">
-          <p id="advice">A D V I C E &nbsp; # </p>
+          <h1 id="advice">A D V I C E &nbsp; # </h1>
           <div class="flexQuote"><p id="quote">""</p></div>
           <div class="flexQuote"><img id="desktop" src="images/pattern-divider-desktop.svg" alt="pattern"></div>
           <div class="flexQuote"><img id="mobile" src="images/pattern-divider-mobile.svg" alt="pattern"></div>
